crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S008_S008.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S008 quote array expansions to preserve element boundaries
 --> <source>:4:15
  |
4 | printf '%s\n' ${arr[@]}
  |

S008 quote array expansions to preserve element boundaries
 --> <source>:5:15
  |
5 | printf '%s\n' ${arr[*]}
  |
