crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S009_S009.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 38
---
S009 call the command directly instead of echoing its substitution
 --> <source>:3:6
  |
3 | echo "$(date)"
  |

S009 call the command directly instead of echoing its substitution
 --> <source>:4:6
  |
4 | echo $(date)
  |

S009 call the command directly instead of echoing its substitution
 --> <source>:5:14
  |
5 | value=$(echo $(date))
  |

S009 call the command directly instead of echoing its substitution
 --> <source>:6:14
  |
6 | command echo "$(date)"
  |

S009 call the command directly instead of echoing its substitution
 --> <source>:7:11
  |
7 | exec echo "$(date)"
  |
