crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S011_S011.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S011 split `-a` and `-o` into explicit condition branches
 --> <source>:2:12
  |
2 | [ "$a" = 1 -a "$b" = 2 ]
  |

S011 split `-a` and `-o` into explicit condition branches
 --> <source>:3:12
  |
3 | [ "$a" = 1 -o "$b" = 2 ]
  |

S011 split `-a` and `-o` into explicit condition branches
 --> <source>:4:14
  |
4 | [ ! "$a" = 1 -a "$b" = 2 ]
  |
