crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S012_S012.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S012 prefer `pgrep` over piping `ps` into `grep`
 --> <source>:4:1
  |
4 | ps aux | grep foo
  |

S012 prefer `pgrep` over piping `ps` into `grep`
 --> <source>:7:1
  |
7 | ps aux | grep -v grep
  |
