crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S013_S013.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S013 avoid piping `ls` into `grep`; match files with globs instead
 --> <source>:4:1
  |
4 | ls | grep foo
  |

S013 avoid piping `ls` into `grep`; match files with globs instead
 --> <source>:7:1
  |
7 | ls -1A /tmp | grep foo
  |
