crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S014_S014.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:4:15
  |
4 | printf '%s\n' $*
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:5:15
  |
5 | printf '%s\n' ${arr[*]}
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:6:13
  |
6 | for item in ${*:1}; do
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:9:1
  |
9 | $* --version
  |
