crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S014_S014_oracle.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:6:15
  |
6 | printf '%s\n' $* ${*}
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:6:18
  |
6 | printf '%s\n' $* ${*}
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:7:15
  |
7 | printf '%s\n' ${arr[*]} ${arr[*]:1}
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:7:25
  |
7 | printf '%s\n' ${arr[*]} ${arr[*]:1}
  |

S014 quote star-splat expansions to preserve argument boundaries
 --> <source>:8:13
  |
8 | for item in $*; do
  |

S014 quote star-splat expansions to preserve argument boundaries
  --> <source>:11:1
   |
11 | $* --version
   |
