crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S015_S015.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
---
S015 quoted star-splat loop items collapse into one value
 --> <source>:4:13
  |
4 | for item in "$*" "${arr[*]}" "x$*y"; do
  |

S015 quoted star-splat loop items collapse into one value
 --> <source>:4:18
  |
4 | for item in "$*" "${arr[*]}" "x$*y"; do
  |

S015 quoted star-splat loop items collapse into one value
 --> <source>:4:30
  |
4 | for item in "$*" "${arr[*]}" "x$*y"; do
  |
