crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S015_S015_oracle.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 177
---
S015 fully quoted loop-list expansions collapse into one value
 --> <source>:5:13
  |
5 | for item in "$*"; do
  |
