crates/shuck-linter/src/rules/style/snapshots/shuck_linter__rules__style__tests__S016_S016.sh.snap
---
source: crates/shuck-linter/src/rules/style/mod.rs
assertion_line: 78
---
S016 avoid echo inside command substitutions
 --> <source>:4:8
  |
4 | direct=$(echo direct)
  |

S016 avoid echo inside command substitutions
 --> <source>:7:9
  |
7 | wrapped=$(command echo wrapped)
  |

S016 avoid echo inside command substitutions
 --> <source>:8:17
  |
8 | builtin_wrapped=$(builtin echo builtin)
  |

S016 avoid echo inside command substitutions
 --> <source>:9:12
  |
9 | redirected=$(echo hidden >/dev/null)
  |

S016 avoid echo inside command substitutions
  --> <source>:12:13
   |
12 | outer=$(foo $(echo nested))
   |

S016 avoid echo inside command substitutions
  --> <source>:13:21
   |
13 | quoted_outer=$(foo "$(echo quoted)")
   |
